k8s/local/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-store
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: store.local
    http:
      paths:
      - path: /v1/customers
        backend:
          serviceName: customers-service
          servicePort: 8080
      - path: /v1/products
        backend:
          serviceName: products-service
          servicePort: 8081
